CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 14:
  earth_radius attribute on grid_mapping variable must be in meters
 13:
  new visadNoDods.jar
  N3iosp, N3header, RAF: simplify  flushing, file.setLength()
  N3 writing: bug in redefine mode.  
  HDF4, HDF-EOS dimensions: replace " " with "_"
  HDF4: deal with compress.compress_type == TagEnum.COMP_CODE_NONE
  Switch to use unidataCommon.jar.
  hawaii station name changed
  GRIB: Made modification for partial use of Pressure coordinates for Hybrid variables
  MSGnavigation must override latLonToProjBB(LatLonRect rect)
 12:
  HDF5 IOSP now sets the Attribute Array unsigned flag; added a convenience routine Attribute.isUnsigned()
  BUFR:  add ecmwf, fnmoc, clean up table names
  Cosmic CSB improvements
  McIdasGrid.isValid()
  Gempak logging
  WRF v3 lat/lon grids. works, but ignores coordsys lat/lon time dependency (is there any?)
  UTM projection bug
  NcML write: fix possible problems with '%' in string values
  BUFR: process 2-1-Y "change width" for enums and chars, ignore 2-6-0 (fnmoc uses as cancel)
  BUFR: compressed data: permutation wrong when ndims > 2, ie more than one nested structure
  BUFR: use new WMO CodeFlagTable
 11:
  Grib1BinaryDataSection get data array dimension from Grib1Data  when bit-map size not available
  CEDRIC radar coordSysBuilder
  BUFR can read JUSA41
  isGridCoordSys: improve performance. should optimize for 2D coords, maybe wait for swath datatype?
  NcMLReader bug when no reference dataset
  BUFR tables refactor
  UI tabs for examining BUFR tables B and D
  refactor BUFR tables
  bug in NetcdfDatasetConvert on converting enums in nested structures
 10:
  multiple profiles in the FslRaob plugin
  StationProfileFeature.getTimes(), getProfileByDate()
  Aggregation bug with  netcdf elements with no referenced dataset
  Remove nested structures from PointFeature where needed
  ProfileFeature now has a nominal time